Revert "Finally stupid mlp"
This reverts commit 0f57a1e4f22a6167b7d6735a87fbaabbf0561179.

--- a/WSTA_Project.ipynb
+++ b/WSTA_Project.ipynb
@@ -115,10 +115,10 @@
     "with open('project_files/inverted_index_dict.json') as f:\n",
     "    inverted_index_dict = json.load(f)\n",
     "\n",
-    "with open('mlp_files/mlp_ner_pred_tags.json') as f:\n",
+    "with open('project_files/mlp_ner_pred_tags.json') as f:\n",
     "    mlp_ner_pred_tags = json.load(f)\n",
     "    \n",
-    "with open('mlp_files/mlp_pos_pred_tags.json') as f:\n",
+    "with open('project_files/mlp_pos_pred_tags.json') as f:\n",
     "    mlp_pos_pred_tags = json.load(f)\n",
     "    "
    ]
@@ -416,22 +416,21 @@
     "    \n",
     "    ans = ''\n",
     "    \n",
-    "#     if q_type in [WHAT, HOW, WHICH, NAME]:\n",
-    "    if q_type in [WHAT, WHICH]:\n",
-    "#         print 'MLP'\n",
+    "    if q_type in [WHAT, HOW, WHICH, NAME]:\n",
+    "        print 'MLP'\n",
     "        ans = get_ans_mlp(qid, my_sent, query)\n",
     "        if ans == '':\n",
-    "#             print 'NO MLP ANS'\n",
+    "            print 'NO MLP ANS'\n",
     "            if q_type == WHAT:\n",
     "                ans = get_what_ans(my_sent, query)\n",
+    "            elif q_type == HOW:  \n",
+    "                ans = get_how_ans(my_sent, query)\n",
     "            elif q_type == WHICH:\n",
     "                ans = get_which_ans(my_sent, query)\n",
-    "#             elif q_type == NAME:\n",
-    "#             ans = get_name_ans(my_sent, query)\n",
+    "            elif q_type == NAME:\n",
+    "            ans = get_name_ans(my_sent, query)\n",
     "    else:\n",
-    "        if q_type == HOW:  \n",
-    "                ans = get_how_ans(my_sent, query)\n",
-    "        elif q_type == WHERE:\n",
+    "        if q_type == WHERE:\n",
     "            ans = get_where_ans(my_sent, query)\n",
     "        elif q_type == WHO:\n",
     "                ans = get_who_ans(my_sent, query)\n",
@@ -443,8 +442,6 @@
     "            ans = get_whom_ans(my_sent, query)\n",
     "        elif q_type == BINARY:\n",
     "            ans = get_binary_ans(my_sent, query)\n",
-    "        elif q_type == NAME:\n",
-    "            ans = get_name_ans(my_sent, query)\n",
     "        elif q_type == POLAR:\n",
     "            ans = get_polar_ans(my_sent, query)  \n",
     "        \n",
@@ -459,13 +456,12 @@
     "    sent_splt_lemma = [lemmatize_word(x) for x in sent_splt]\n",
     "        \n",
     "    if mlp_ner_pred_tags[i] != []:\n",
-    "        ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER, True)\n",
+    "        ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER)\n",
     "        ner_tags = mlp_ner_pred_tags[i]\n",
     "        ans_candidate = get_ans_candidate(ner_candidate, ner_tags, NER)\n",
     "    else:\n",
-    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS, True)\n",
+    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS)\n",
     "        pos_tags = mlp_pos_pred_tags[i]\n",
-    "        pos_tags = [item[:2] for item in pos_tags]\n",
     "        ans_candidate = get_ans_candidate(pos_candidate, pos_tags, POS)\n",
     "    \n",
     "    return get_ans_string_mlp(query, sent_splt, ans_candidate)"
@@ -485,7 +481,7 @@
     "    sent_splt = nltk.word_tokenize(my_sent)\n",
     "    sent_splt_lemma = [lemmatize_word(x) for x in sent_splt]\n",
     "    \n",
-    "    pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS, False)\n",
+    "    pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS)\n",
     "    \n",
     "    pos_tags = QUERY_CLASS[WHAT][POS][:]\n",
     "#     print pos_tags\n",
@@ -513,14 +509,14 @@
     "    sent_splt = nltk.word_tokenize(my_sent)\n",
     "    sent_splt_lemma = [lemmatize_word(x) for x in sent_splt]\n",
     "    \n",
-    "    ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER, False)\n",
+    "    ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER)\n",
     "    \n",
     "    ner_tags = QUERY_CLASS[WHO][NER][:]\n",
     "    \n",
     "    ans_candidate = get_ans_candidate(ner_candidate, ner_tags, NER)\n",
     "    \n",
     "    if ans_candidate == []:\n",
-    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS, False)\n",
+    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS)\n",
     "        pos_tags = QUERY_CLASS[WHO][POS][:]\n",
     "        ans_candidate = get_ans_candidate(pos_candidate, pos_tags, POS)\n",
     "        \n",
@@ -530,14 +526,14 @@
     "    sent_splt = nltk.word_tokenize(my_sent)\n",
     "    sent_splt_lemma = [lemmatize_word(x) for x in sent_splt]\n",
     "    \n",
-    "    ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER, False)\n",
+    "    ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER)\n",
     "    \n",
     "    ner_tags = QUERY_CLASS[WHERE][NER][:]\n",
     "    \n",
     "    ans_candidate = get_ans_candidate(ner_candidate, ner_tags, NER)\n",
     "    \n",
     "    if ans_candidate == []:\n",
-    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS, False)\n",
+    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS)\n",
     "        pos_tags = QUERY_CLASS[WHERE][POS][:]\n",
     "        ans_candidate = get_ans_candidate(pos_candidate, pos_tags, POS)\n",
     "        \n",
@@ -547,14 +543,14 @@
     "    sent_splt = nltk.word_tokenize(my_sent)\n",
     "    sent_splt_lemma = [lemmatize_word(x) for x in sent_splt]\n",
     "    \n",
-    "    ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER, False)\n",
+    "    ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER)\n",
     "    \n",
     "    ner_tags = QUERY_CLASS[WHEN][NER][:]\n",
     "    \n",
     "    ans_candidate = get_ans_candidate(ner_candidate, ner_tags, NER)\n",
     "    \n",
     "    if ans_candidate == []:\n",
-    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS, False)\n",
+    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS)\n",
     "        pos_tags = QUERY_CLASS[WHEN][POS][:]\n",
     "        ans_candidate = get_ans_candidate(pos_candidate, pos_tags, POS)\n",
     "        \n",
@@ -564,14 +560,14 @@
     "    sent_splt = nltk.word_tokenize(my_sent)\n",
     "    sent_splt_lemma = [lemmatize_word(x) for x in sent_splt]\n",
     "    \n",
-    "    ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER, False)\n",
+    "    ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER)\n",
     "    \n",
     "    ner_tags = QUERY_CLASS[WHICH][NER][:]\n",
     "    \n",
     "    ans_candidate = get_ans_candidate(ner_candidate, ner_tags, NER)\n",
     "    \n",
     "    if ans_candidate == []:\n",
-    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS, False)\n",
+    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS)\n",
     "        pos_tags = QUERY_CLASS[WHICH][POS][:]\n",
     "        ans_candidate = get_ans_candidate(pos_candidate, pos_tags, POS)\n",
     "        \n",
@@ -609,7 +605,7 @@
     "def get_whom_ans(my_sent, query):\n",
     "    sent_splt = nltk.word_tokenize(my_sent)\n",
     "    sent_splt_lemma = [lemmatize_word(x) for x in sent_splt]\n",
-    "    pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS, False)\n",
+    "    pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS)\n",
     "\n",
     "    if pos_candidate.has_key('IN'):\n",
     "        pos_candidate['IN'].sort()\n",
@@ -617,9 +613,9 @@
     "        sent_splt = sent_splt[prep_index+1:]\n",
     "        sent_splt_lemma = sent_splt_lemma[prep_index+1:]\n",
     "        my_sent = ' '.join(sent_splt)\n",
-    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS, False)\n",
+    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS)\n",
     "\n",
-    "    ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER, False)\n",
+    "    ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER)\n",
     "    \n",
     "    ner_tags = QUERY_CLASS[WHOM][NER][:]\n",
     "    \n",
@@ -635,7 +631,7 @@
     "    sent_splt = nltk.word_tokenize(my_sent)\n",
     "    sent_splt_lemma = [lemmatize_word(x) for x in sent_splt]\n",
     "    \n",
-    "    pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS, False)\n",
+    "    pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS)\n",
     "    \n",
     "    pos_tags = QUERY_CLASS[NAME][POS][:]\n",
     "    \n",
@@ -654,7 +650,7 @@
     "                return 'false'\n",
     "        return 'true'\n",
     "    \n",
-    "    pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS, False)\n",
+    "    pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS)\n",
     "    \n",
     "    ans_candidate = get_ans_candidate(pos_candidate, [], POS)\n",
     "\n",
@@ -694,19 +690,19 @@
     "    \n",
     "    if word_after_how:\n",
     "                \n",
-    "        ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER, False)\n",
+    "        ner_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, NER)\n",
     "        ner_tags = HOW_SUBCLASS[word_after_how][NER]\n",
     "        ans_candidate = get_ans_candidate(ner_candidate, ner_tags, NER)\n",
     "        \n",
     "        \n",
     "        if ans_candidate == []:\n",
     "\n",
-    "            pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS, False)\n",
+    "            pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS)\n",
     "            pos_tags = HOW_SUBCLASS[word_after_how][POS]\n",
     "            ans_candidate = get_ans_candidate(pos_candidate, pos_tags, POS) \n",
     "            \n",
     "    else:\n",
-    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS, False)\n",
+    "        pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS)\n",
     "\n",
     "        if pos_candidate.has_key('IN'):\n",
     "            pos_candidate['IN'].sort()\n",
@@ -714,7 +710,7 @@
     "            sent_splt = sent_splt[prep_index+1:]\n",
     "            sent_splt_lemma = sent_splt_lemma[prep_index+1:]\n",
     "            my_sent = ' '.join(sent_splt)\n",
-    "            pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS, False)\n",
+    "            pos_candidate = tag_sent(my_sent, sent_splt, sent_splt_lemma, query, POS)\n",
     "        \n",
     "        ans_candidate = get_ans_candidate(pos_candidate, [], POS)\n",
     "    \n",
@@ -760,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -768,7 +764,7 @@
    },
    "outputs": [],
    "source": [
-    "def tag_sent(my_sent, sent_splt, sent_splt_lemma, query, tag_type, use_mlp):\n",
+    "def tag_sent(my_sent, sent_splt, sent_splt_lemma, query, tag_type):\n",
     "    \n",
     "    with open('project_files/tagged_sents.json') as f:\n",
     "        tagged_sents = json.load(f)\n",
@@ -805,7 +801,6 @@
     "                    candidates[tagged[i][1]].append(i)\n",
     "                else:\n",
     "                    candidates[tagged[i][1][:2]].append(i)\n",
-    "\n",
     "    \n",
     "    return candidates\n",
     "   \n",
@@ -844,11 +839,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -919,6 +915,7 @@
       "61\n",
       "62\n",
       "63\n",
+      "NO MLP ANS\n",
       "64\n",
       "65\n",
       "66\n",
@@ -969,6 +966,7 @@
       "111\n",
       "112\n",
       "113\n",
+      "NO MLP ANS\n",
       "114\n",
       "115\n",
       "116\n",
@@ -1010,6 +1008,7 @@
       "152\n",
       "153\n",
       "154\n",
+      "NO MLP ANS\n",
       "155\n",
       "156\n",
       "157\n",
@@ -1099,6 +1098,7 @@
       "241\n",
       "242\n",
       "243\n",
+      "NO MLP ANS\n",
       "244\n",
       "245\n",
       "246\n",
@@ -1305,6 +1305,7 @@
       "447\n",
       "448\n",
       "449\n",
+      "NO MLP ANS\n",
       "450\n",
       "451\n",
       "452\n",
@@ -1363,6 +1364,7 @@
       "505\n",
       "506\n",
       "507\n",
+      "NO MLP ANS\n",
       "508\n",
       "509\n",
       "510\n",
@@ -1435,6 +1437,7 @@
       "577\n",
       "578\n",
       "579\n",
+      "NO MLP ANS\n",
       "580\n",
       "581\n",
       "582\n",
@@ -1642,6 +1645,7 @@
       "784\n",
       "785\n",
       "786\n",
+      "NO MLP ANS\n",
       "787\n",
       "788\n",
       "789\n",
@@ -2116,6 +2120,7 @@
       "1258\n",
       "1259\n",
       "1260\n",
+      "NO MLP ANS\n",
       "1261\n",
       "1262\n",
       "1263\n",
@@ -2288,6 +2293,7 @@
       "1430\n",
       "1431\n",
       "1432\n",
+      "NO MLP ANS\n",
       "1433\n",
       "1434\n",
       "1435\n",
@@ -2330,6 +2336,7 @@
       "1472\n",
       "1473\n",
       "1474\n",
+      "NO MLP ANS\n",
       "1475\n",
       "1476\n",
       "1477\n",
@@ -2344,6 +2351,7 @@
       "1486\n",
       "1487\n",
       "1488\n",
+      "NO MLP ANS\n",
       "1489\n",
       "1490\n",
       "1491\n",
@@ -2472,6 +2480,7 @@
       "1614\n",
       "1615\n",
       "1616\n",
+      "NO MLP ANS\n",
       "1617\n",
       "1618\n",
       "1619\n",
@@ -2688,6 +2697,7 @@
       "1830\n",
       "1831\n",
       "1832\n",
+      "NO MLP ANS\n",
       "1833\n",
       "1834\n",
       "1835\n",
@@ -3210,6 +3220,7 @@
       "2352\n",
       "2353\n",
       "2354\n",
+      "NO MLP ANS\n",
       "2355\n",
       "2356\n",
       "2357\n",
@@ -3408,6 +3419,7 @@
       "2550\n",
       "2551\n",
       "2552\n",
+      "NO MLP ANS\n",
       "2553\n",
       "2554\n",
       "2555\n",
@@ -3671,6 +3683,7 @@
       "2813\n",
       "2814\n",
       "2815\n",
+      "NO MLP ANS\n",
       "2816\n",
       "2817\n",
       "2818\n",
@@ -3837,6 +3850,7 @@
       "2979\n",
       "2980\n",
       "2981\n",
+      "NO MLP ANS\n",
       "2982\n",
       "2983\n",
       "2984\n",
@@ -4079,6 +4093,7 @@
       "3221\n",
       "3222\n",
       "3223\n",
+      "NO MLP ANS\n",
       "3224\n",
       "3225\n",
       "3226\n",
@@ -4092,6 +4107,7 @@
       "3234\n",
       "3235\n",
       "3236\n",
+      "NO MLP ANS\n",
       "3237\n",
       "3238\n",
       "3239\n",
@@ -4521,9 +4537,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
