--- a/WSTA_MLP.ipynb
+++ b/WSTA_MLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -24,7 +24,7 @@
     "TESTNAME = 'project_files/testing.json'\n",
     "\n",
     "Q_WORDS = ['how','what','whom','when','who','where','which','name']\n",
-    "SELECTED_Q = ['how','what','which', 'name']\n",
+    "SELECTED_Q = ['what','which']\n",
     "\n",
     "ner_dir = 'stanford-ner-2018-02-27/'\n",
     "ner_jarfile = ner_dir + 'stanford-ner.jar'\n",
@@ -55,21 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[u'is', u'many', u'was', u'year', u'did', u'type', u'does', u'country', u'percentage', u'much', u'kind', u'?', u'language', u'other', u'date', u'city', u\"'s\", u'do', u'political', u'are', u'century', u'long', u'company', u'month', u'can', u'two', u'group', u'were', u'period', u'percent', u'sort', u'word', u'part', u'would', u'decade', u'term', u'notable', u'age', u'has', u'of', u'form', u'neighborhood', u'organization', u'color', u'old', u'branch', u'far', u'award', u'dutch', u'isotope', u'else', u'industry', u'area', u'era', u'nation', u'event', u'state', u'party', u'caused', u'large', u'town', u'dialect', u'philosophy', u'types', u'years', u'germanic', u'name', u'university', u'temperature', u'place', u'number', u'rank', u'individual', u'nationality', u'region', u'book', u'religion', u'magazine', u'tribe', u'span', u'empire', u'time', u'concept', u'dynasty', u'gender', u'street', u'action', u'family', u'county', u'must', u'work', u'topic', u'element', u'geographic', u'material', u'could', u'major', u'quality', u'province', u'pope', u'german', u'title', u'areas', u'gospel', u'computer', u'calendar', u'became', u'character', u'community', u'geographical', u'aspect', u'console', u'world', u'often', u'people', u'church', u'business', u'ideology', u'sound', u'egyptian', u'second', u'section', u'version', u'military', u'army', u'native', u'court', u'divides', u'ethnic', u'president', u'man', u'light', u'interrupted', u'style', u'theologian', u'happened', u'day', u'series', u'principles', u'dialects', u'revolutionary', u'florida', u'publication', u'system', u'relationship', u'park', u'institution', u'angel', u'modern', u'subjects', u'class', u'professional', u'factor', u'coast', u'famous', u'countries', u'river', u'rmp', u'national', u'culture', u'subject', u'genre', u'cities', u'point', u'direction', u'child', u'former', u'will', u'hayek', u'parts', u'ocean', u'person', u'position', u'the', u'bodies', u'had', u'lake', u'government', u'ruler', u'economic', u'philosopher', u'trophy', u'doctrine', u'fraction', u'war', u'with', u'tournament', u'film', u'building']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_features(trainfile):\n",
     "    feature_count = defaultdict(int)\n",
@@ -81,8 +73,9 @@
     "        for q in SELECTED_Q:\n",
     "            if q in question_token:\n",
     "                index = question_token.index(q)\n",
-    "                next_ = question_token[index + 1]\n",
-    "                feature_count[next_] += 1\n",
+    "                if index+1 < len(question_token):\n",
+    "                    next_ = question_token[index + 1]\n",
+    "                    feature_count[next_] += 1\n",
     "    return feature_count\n",
     "\n",
     "dic = get_features(trainfile)\n",
@@ -109,7 +102,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('mlp_files/all_ans_pos.json') as f:\n",
+    "    lst_la = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43379"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lst_la)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -124,40 +151,87 @@
     "        tagged_ans = json.load(f)\n",
     "    \n",
     "    \n",
-    "    for dic in trainfile:\n",
+    "    for i in range(len(trainfile)):\n",
+    "        print i\n",
+    "        dic = trainfile[i]\n",
     "        ans = dic['text']\n",
     "        ans_token = nltk.word_tokenize(ans)\n",
-    "        \n",
+    "    \n",
+    "    \n",
+    "        ans_tags = [[],[]]\n",
     "        if tagged_ans.has_key(ans):\n",
     "            ans_tags = [tagged_ans[ans][0], tagged_ans[ans][1]]\n",
     "        else:\n",
-    "            ner = ner_tagger.tag(ans_token)\n",
     "            pos = pos_tagger.tag(ans_token)\n",
     "\n",
-    "            ner_tags = set()\n",
     "            pos_tags = set()\n",
-    "\n",
-    "            for item in ner:\n",
-    "                ner_tags.add(item[1])\n",
-    "            \n",
-    "#             print ner_tags\n",
-    "            \n",
-    "            if 'O' in ner_tags:\n",
-    "                ner_tags.remove('O')\n",
     "\n",
     "            for item in pos:\n",
     "                pos_tags.add(item[1])\n",
     "\n",
-    "            ans_tags = [list(ner_tags), list(pos_tags)]\n",
+    "            ans_tags[1] = list(pos_tags)\n",
     "            \n",
     "            tagged_ans[ans] = ans_tags\n",
-    "            \n",
-    "            with open('mlp_files/tagged_ans.json', 'w') as f:\n",
-    "                json.dump(tagged_ans, f)\n",
     "\n",
     "        all_ans.append(ans_tags)\n",
     "        \n",
+    "    with open('mlp_files/tagged_ans.json', 'w') as f:\n",
+    "        json.dump(tagged_ans, f)\n",
+    "        \n",
     "    return all_ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# def get_classes(trainfile):\n",
+    "#     all_ans = []\n",
+    "    \n",
+    "#     with open('mlp_files/tagged_ans.json') as f:\n",
+    "#         tagged_ans = json.load(f)\n",
+    "    \n",
+    "    \n",
+    "#     for dic in trainfile:\n",
+    "#         ans = dic['text']\n",
+    "#         ans_token = nltk.word_tokenize(ans)\n",
+    "        \n",
+    "#         if tagged_ans.has_key(ans):\n",
+    "#             ans_tags = [tagged_ans[ans][0], tagged_ans[ans][1]]\n",
+    "#         else:\n",
+    "#             ner = ner_tagger.tag(ans_token)\n",
+    "#             pos = pos_tagger.tag(ans_token)\n",
+    "\n",
+    "#             ner_tags = set()\n",
+    "#             pos_tags = set()\n",
+    "\n",
+    "#             for item in ner:\n",
+    "#                 ner_tags.add(item[1])\n",
+    "            \n",
+    "# #             print ner_tags\n",
+    "            \n",
+    "#             if 'O' in ner_tags:\n",
+    "#                 ner_tags.remove('O')\n",
+    "\n",
+    "#             for item in pos:\n",
+    "#                 pos_tags.add(item[1])\n",
+    "\n",
+    "#             ans_tags = [list(ner_tags), list(pos_tags)]\n",
+    "            \n",
+    "#             tagged_ans[ans] = ans_tags\n",
+    "            \n",
+    "#             with open('mlp_files/tagged_ans.json', 'w') as f:\n",
+    "#                 json.dump(tagged_ans, f)\n",
+    "\n",
+    "#         all_ans.append(ans_tags)\n",
+    "        \n",
+    "#     return all_ans"
    ]
   },
   {
@@ -173,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -223,23 +297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X_train\n",
-      "X_test\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train = get_vectors(trainfile, 'mlp_files/train_vec.json')\n",
     "print \"X_train\"\n",
@@ -250,9 +315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -265,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -279,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -296,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -316,9 +381,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "print y_train_all_ans[40000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -332,7 +410,12 @@
     "\n",
     "for item in y_train_all_ans:\n",
     "    ner_tags = set(item[0])\n",
-    "    pos_tags = set(item[1])\n",
+    "    pos_wanted = item[1]\n",
+    "\n",
+    "    while type(pos_wanted[0]) == list:\n",
+    "        pos_wanted = pos_wanted[0]\n",
+    "\n",
+    "    pos_tags = set(pos_wanted)\n",
     "    \n",
     "    all_ans_ner.append(get_tags_index(ner_tags, all_ans_ner_type))\n",
     "    all_ans_pos.append(get_tags_index(pos_tags, all_ans_pos_type))"
@@ -340,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -357,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -376,41 +459,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MLPClassifier(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
-       "       beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
-       "       hidden_layer_sizes=(13, 13, 13), learning_rate='constant',\n",
-       "       learning_rate_init=0.001, max_iter=500, momentum=0.9,\n",
-       "       nesterovs_momentum=True, power_t=0.5, random_state=None,\n",
-       "       shuffle=True, solver='adam', tol=0.0001, validation_fraction=0.1,\n",
-       "       verbose=False, warm_start=False)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mlp_ner = MLPClassifier(hidden_layer_sizes=(13,13,13),max_iter=500)\n",
+    "# mlp_ner = MLPClassifier(hidden_layer_sizes=(13,13,13),max_iter=500)\n",
+    "# mlp_ner.fit(X_train,all_ans_ner)\n",
+    "\n",
+    "# mlp_pos = MLPClassifier(hidden_layer_sizes=(13,13,13),max_iter=500)\n",
+    "# mlp_pos.fit(X_train,all_ans_pos)\n",
+    "\n",
+    "mlp_ner = MLPClassifier(hidden_layer_sizes=(100, 100))\n",
     "mlp_ner.fit(X_train,all_ans_ner)\n",
     "\n",
-    "mlp_pos = MLPClassifier(hidden_layer_sizes=(13,13,13),max_iter=500)\n",
+    "mlp_pos = MLPClassifier(hidden_layer_sizes=(100, 100))\n",
     "mlp_pos.fit(X_train,all_ans_pos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -424,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -447,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
